# UltraAppKitTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json
.docs/: LICENSES.md
src/: main.cpp
